added local storage

--- a/accessibility-feature.html
+++ b/accessibility-feature.html
@@ -85,6 +85,12 @@
             }
 
             button.addEventListener('click', toggleTheme);
+            // Save a value to localStorage
+            localStorage.setItem('theme', 'dark');
+
+            // Retrieve the value
+            const theme = localStorage.getItem('theme');
+            console.log(`The selected theme is: ${theme}`);
 
 });
 
